[package]
name = "group_by_key"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Iterates over subslices"
repository = "https://github.com/qthree/group_by_key/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

